--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,46 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:gradient="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_base"
+    android:background="@color/colorPrimaryLight"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
     tools:context="com.example.mkemaltas.yapiyoz.BaseActivity">
-   <!--
-        <com.dynamitechetan.flowinggradient.FlowingGradient
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
-    -->
+    <!--
+         <com.dynamitechetan.flowinggradient.FlowingGradient
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         />
+     -->
     <LinearLayout
-        android:id="@+id/login_fragment_email_login_ll"
-        android:orientation="vertical"
+        android:id="@+id/login_fragment_login_ll"
         android:layout_width="match_parent"
-        android:background="@drawable/bg_login_layouts_dark"
-        android:layout_height="250dp"
-        android:padding="20dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:layout_marginTop="16dp"
+        android:orientation="vertical"
+        android:padding="20dp">
 
+        <EditText
+            android:id="@+id/login_fragment_username_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/username"
+            android:inputType="text" />
 
+        <EditText
+            android:id="@+id/login_fragment_password_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/password"
+            android:inputType="textPassword" />
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="5dp">
 
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/bg_login_button_dark" />
+        </LinearLayout>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/login_fragment_or_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/login_fragment_login_ll"
+        android:gravity="center"
+        android:text="OR"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="30dp"
+        android:textStyle="bold" />
 
     <LinearLayout
-        android:layout_below="@+id/login_fragment_email_login_ll"
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/login_fragment_or_tv"
         android:layout_margin="10dp"
         android:orientation="vertical"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:background="@drawable/bg_login_layouts_light"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:id="@+id/linearLayout">
+        android:padding="20dp">
 
         <!--
         <com.shaishavgandhi.loginbuttons.GooglePlusButton
@@ -53,40 +85,37 @@
         />
         -->
 
-    <com.shaishavgandhi.loginbuttons.FacebookButton
-        android:id="@+id/login_fragment_fb_button"
-        android:layout_width="match_parent"
-        android:text="@string/sign_in_with_facebook"
-        app:iconSize="30dp"
-        app:roundedCorner="true"
-        app:roundedCornerRadius="10dp"
-        android:layout_marginTop="@dimen/login_button_vertical_margin"
-        android:layout_marginBottom="@dimen/login_button_vertical_margin"
-        android:layout_height="wrap_content"
-        />
+        <com.shaishavgandhi.loginbuttons.FacebookButton
+            android:id="@+id/login_fragment_fb_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/login_button_vertical_margin"
+            android:layout_marginTop="@dimen/login_button_vertical_margin"
+            android:text="@string/sign_in_with_facebook"
+            app:iconSize="30dp"
+            app:roundedCorner="true"
+            app:roundedCornerRadius="10dp" />
 
-    <com.shaishavgandhi.loginbuttons.LinkedInButton
-        android:id="@+id/login_fragment_linkedin_button"
-        android:layout_width="match_parent"
-        app:iconSize="30dp"
-        app:roundedCorner="true"
-        app:roundedCornerRadius="10dp"
-        android:layout_marginBottom="@dimen/login_button_vertical_margin"
-        android:text="@string/sign_in_with_linkedin"
-        android:layout_height="wrap_content"
-        />
-    <com.shaishavgandhi.loginbuttons.TwitterButton
-        android:id="@+id/login_fragment_twitter_button"
-        android:layout_width="match_parent"
-        app:iconSize="30dp"
-        app:roundedCorner="true"
-        app:roundedCornerRadius="10dp"
-        android:layout_marginBottom="@dimen/login_button_vertical_margin"
-        android:text="@string/sign_in_with_twitter"
-        android:layout_height="wrap_content"
-        />
+        <com.shaishavgandhi.loginbuttons.LinkedInButton
+            android:id="@+id/login_fragment_linkedin_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/login_button_vertical_margin"
+            android:text="@string/sign_in_with_linkedin"
+            app:iconSize="30dp"
+            app:roundedCorner="true"
+            app:roundedCornerRadius="10dp" />
+
+        <com.shaishavgandhi.loginbuttons.TwitterButton
+            android:id="@+id/login_fragment_twitter_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/login_button_vertical_margin"
+            android:text="@string/sign_in_with_twitter"
+            app:iconSize="30dp"
+            app:roundedCorner="true"
+            app:roundedCornerRadius="10dp" />
     </LinearLayout>
-
 
 
 </RelativeLayout>
